Improve estimates of bytes in running workers (#26678)