@@ -12,6 +12,7 @@ import static org.mockito.Mockito.when;
 import io.airbyte.integrations.destination_async.buffers.BufferDequeue;
 import io.airbyte.protocol.models.v0.StreamDescriptor;
 import java.time.Instant;
+import java.util.Collections;
 import java.util.List;
 import java.util.Optional;
 import java.util.Set;
@@ -19,7 +20,7 @@ import java.util.concurrent.atomic.AtomicBoolean;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
 
-class DetectStreamToFlushTest {
+public class SizeTriggerTest {
 
   public static final Instant NOW = Instant.now();
   public static final Instant FIVE_MIN_AGO = NOW.minusSeconds(60 * 5);
@@ -37,54 +38,40 @@ class DetectStreamToFlushTest {
   }
 
   @Test
-  void testGetNextSkipsEmptyStreams() {
+  void testSizeTriggerOnEmptyQueue() {
     final BufferDequeue bufferDequeue = mock(BufferDequeue.class);
     when(bufferDequeue.getBufferedStreams()).thenReturn(Set.of(DESC1));
     when(bufferDequeue.getQueueSizeBytes(DESC1)).thenReturn(Optional.of(0L));
     final RunningFlushWorkers runningFlushWorkers = mock(RunningFlushWorkers.class);
     final DetectStreamToFlush detect = new DetectStreamToFlush(bufferDequeue, runningFlushWorkers, new AtomicBoolean(false), flusher);
-    assertEquals(Optional.empty(), detect.getNextStreamToFlush(0));
+    assertEquals(false, detect.isSizeTriggered(DESC1, SIZE_10MB).getLeft());
   }
 
   @Test
-  void testGetNextPicksUpOnSizeTrigger() {
+  void testSizeTriggerRespectsThreshold() {
     final BufferDequeue bufferDequeue = mock(BufferDequeue.class);
     when(bufferDequeue.getBufferedStreams()).thenReturn(Set.of(DESC1));
     when(bufferDequeue.getQueueSizeBytes(DESC1)).thenReturn(Optional.of(1L));
     final RunningFlushWorkers runningFlushWorkers = mock(RunningFlushWorkers.class);
     final DetectStreamToFlush detect = new DetectStreamToFlush(bufferDequeue, runningFlushWorkers, new AtomicBoolean(false), flusher);
     // if above threshold, triggers
-    assertEquals(Optional.of(DESC1), detect.getNextStreamToFlush(0));
+    assertEquals(true, detect.isSizeTriggered(DESC1, 0).getLeft());
     // if below threshold, no trigger
-    assertEquals(Optional.empty(), detect.getNextStreamToFlush(1));
+    assertEquals(false, detect.isSizeTriggered(DESC1, SIZE_10MB).getLeft());
   }
 
   @Test
-  void testGetNextAccountsForAlreadyRunningWorkers() {
+  void testSizeTriggerRespectsRunningWorkersEstimate() {
     final BufferDequeue bufferDequeue = mock(BufferDequeue.class);
     when(bufferDequeue.getBufferedStreams()).thenReturn(Set.of(DESC1));
     when(bufferDequeue.getQueueSizeBytes(DESC1)).thenReturn(Optional.of(1L));
     final RunningFlushWorkers runningFlushWorkers = mock(RunningFlushWorkers.class);
-    when(runningFlushWorkers.getSizesOfRunningWorkerBatches(any())).thenReturn(List.of(Optional.of(SIZE_10MB)));
+    when(runningFlushWorkers.getSizesOfRunningWorkerBatches(any()))
+        .thenReturn(Collections.emptyList())
+        .thenReturn(List.of(Optional.of(SIZE_10MB)));
     final DetectStreamToFlush detect = new DetectStreamToFlush(bufferDequeue, runningFlushWorkers, new AtomicBoolean(false), flusher);
-    assertEquals(Optional.empty(), detect.getNextStreamToFlush(0));
-  }
-
-  @Test
-  void testGetNextPicksUpOnTimeTrigger() {
-    final BufferDequeue bufferDequeue = mock(BufferDequeue.class);
-    when(bufferDequeue.getBufferedStreams()).thenReturn(Set.of(DESC1));
-    when(bufferDequeue.getQueueSizeBytes(DESC1)).thenReturn(Optional.of(1L));
-    when(bufferDequeue.getTimeOfLastRecord(DESC1))
-        .thenReturn(Optional.empty())
-        .thenReturn(Optional.of(NOW))
-        .thenReturn(Optional.of(FIVE_MIN_AGO));
-    final RunningFlushWorkers runningFlushWorkers = mock(RunningFlushWorkers.class);
-    when(runningFlushWorkers.getSizesOfRunningWorkerBatches(any())).thenReturn(List.of(Optional.of(SIZE_10MB)));
-    final DetectStreamToFlush detect = new DetectStreamToFlush(bufferDequeue, runningFlushWorkers, new AtomicBoolean(false), flusher);
-    assertEquals(Optional.empty(), detect.getNextStreamToFlush(0));
-    assertEquals(Optional.empty(), detect.getNextStreamToFlush(0));
-    assertEquals(Optional.of(DESC1), detect.getNextStreamToFlush(0));
+    assertEquals(true, detect.isSizeTriggered(DESC1, 0).getLeft());
+    assertEquals(false, detect.isSizeTriggered(DESC1, 0).getLeft());
   }
 
 }
